--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+ table {
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 2px solid black;
+            
+        }
+        .black-cell {
+            background-color: black;
+            color: white;
+        }
+
+}
