--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
             
         }
         .black-cell {
+			text-align:center;
             background-color: black;
             color: white;
         }
